deployment/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdata
spec:
  selector:
    matchLabels:
      app: opsdata
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opsdata
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      containers:
      - env:
        - name: DB_HOST
          value: opsdata-mariadb-galera
        - name: DB_PORT
          value: "3306"
        - name: DB_USER
          value: opsdata
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: mariadb-password
              name: opsdata-mariadb-galera
        image: registry.support.tools/opsdata/opsdata:BUILD_NUMBER
        imagePullPolicy: IfNotPresent
        name: opsdata
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
