deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opsdata
  name: opsdata
spec:
  ports:
  - name: "http"
    port: 8000
    targetPort: 8000
  selector:
    app: opsdata
